tests/regression/errors/multiple_assign_errors.ctp

def (main:
    x = y = 0  # error in c++ but eventual TODO should error early instead of generating "const auto x = const auto y = 0"
)
    